# sonic-buildimage

./: .bazelignore  .bazelrc  MODULE.bazel
device/: BUILD.bazel
dockers/: BUILD.bazel
dockers/docker-base-bookworm/: BUILD.bazel  base_bookworm.MODULE.bazel  site_packages.bzl
dockers/docker-config-engine-bookworm/: BUILD.bazel
dockers/docker-orchagent/: BUILD.bazel
dockers/docker-sonic-p4rt/: BUILD.bazel
dockers/docker-swss-layer-bookworm/: BUILD.bazel
dockers/docker-syncd/: BUILD.bazel
files/: BUILD.bazel
platform/broadcom/docker-syncd-brcm/: BUILD.bazel
platform/vs/docker-sonic-vs/: BUILD.bazel
platform/vs/docker-syncd-vs/: BUILD.bazel
src/libnl3/: .gitignore  BUILD.bazel  MODULE.bazel  bison_bin.BUILD  flex_bin.BUILD  libnl3.BUILD  m4_bin.BUILD
src/libyang3/: MODULE.bazel
src/libyang3-py3/: BUILD.bazel  MODULE.bazel
src/sonic-config-engine/: MODULE.bazel
src/sonic-device-data/: BUILD.bazel
src/sonic-py-common/: MODULE.bazel
src/sonic-supervisord-utilities/: MODULE.bazel
src/sonic-sysmgr/: BUILD.bazel  MODULE.bazel  extract_tar.bzl  flags.bzl  gnoi.bzl
src/sonic-sysmgr/rebootbackend/: BUILD.bazel
src/sonic-yang-mgmt/: BUILD.bazel  MODULE.bazel
src/sonic-yang-models/: .bazelrc  BUILD.bazel  MODULE.bazel  setup.py
tools/bazel/: migration_manager.py  test_working_targets.sh
tools/sonic-bazel-common/: BUILD.bazel  MODULE.bazel
