apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm", "bookworm-updates"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)

apt.install(
    dependency_set = "bookworm",
    suites = ["bookworm", "bookworm-updates", "bookworm-security"],
    packages = [
        "base-files",
        "ca-certificates",
        "libc6",
        "libc-bin",
        "libssl3",
        "netbase",
        "openssl",
        "tzdata",
        "media-types",
        "gcc-12-base",
        "libgcc-s1",
        "libgomp1",
        "libstdc++6",
        "binutils",


        "krb5-multidev",

        "coreutils",
        "bash",
        "curl",
        "less",
        "perl",
        "procps",
        "python3",
        "python-is-python3",
        "vim-tiny",
        "rsyslog",
        "redis-tools",
        "libdaemon0",
        "libdbus-1-3",
        "libjansson4",
        "iproute2",
        "net-tools",
        "jq",
        "libzmq5",
        "libwrap0",
        "libatomic1",
        "libgmp10",
        "libgmpxx4ldbl",
        "libpcre2-8-0",
        "libyang2-dev",


        # from rules/libteam.mk
        "libteam5",
        "libteam-dev",
        "libteamdctl0",
        "libteam-utils",

        # from docker-orchagent/Dockerfile.j2
        "ifupdown",
        "arping",
        # "iproute2", # Already here
        "ndisc6",
        "tcpdump",
        "bridge-utils",
        "conntrack",
        "ndppd",
        "python3-protobuf",
        "pciutils",
        "python3-netifaces",

        # from platform/vs/docker-syncd-vs
        # "iproute2", # Already here
        "libcap2-bin",
        # Second round of deps
        "libabsl20220623",
        "libc-ares2",
        "python3-six",
        "libboost-thread1.74.0",
        "libboost-dev",
        "libboost-system-dev",
        "libboost-thread-dev",
        "libboost-filesystem1.74.0",
        "libboost-program-options1.74.0",
        "libboost-thread1.74.0",
        "libnanomsg5",
        "libpcap0.8",
        "libthrift-0.17.0",
        "libboost-dev",
        "libboost-filesystem-dev",
        "libboost-program-options-dev",
        "libgmp-dev",
        "libnanomsg-dev",
        "libpcap-dev",
        "libtool",
        "pkg-config",
        "libthrift-dev",
        "python3-thrift",
        "thrift-compiler",
        "libboost-iostreams1.74.0",
        "libgc1",
        "cpp",
        "libboost-dev",
        "libboost-all-dev",
        "libboost-graph-dev",
        "libboost-iostreams-dev",
        "libfl-dev",
        "libgc-dev",
        "libgmp-dev",
        "libbpf-dev",
        "tcpdump",
        "libelf-dev",
        "llvm",
        "clang",
        "python3-pyroute2",
        "python3-ply",
        "python3-scapy",
        "python3-setuptools",
        "python3-thrift",
        "libthrift-0.17.0",
        "libgrpc++1.51",
        "libgrpc29",
        "libprotobuf32",
        "libboost-dev",
        "libboost-system-dev",
        "libboost-thread-dev",
        "libprotoc-dev",
        "protobuf-compiler",
        "python3-protobuf",
        "libgrpc++-dev",
        "libgrpc-dev",
        "protobuf-compiler-grpc",
        "python3-grpcio",

        # TODO BL :This is jsut to test
        "libdbus-c++-dev",
        "libdbus-c++-bin",
    ],
)

apt.lock(
   into = "packages.lock",
)
use_repo(apt, "bookworm")


uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pip")
uv.declare_venv(
    hub_name = "pip",
    venv_name = "default",
)
uv.lockfile(
    hub_name = "pip",
    venv_name = "default",
    src = "//dockers/docker-base-bookworm:uv.lock",
)
uv.override_requirement(
    hub_name = "pip",
    requirement = "libyang",
    target = "@libyang3_py3//:libyang3_py3",
    venv_name = "default",
)
use_repo(uv, "pip")
