load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")
load("@rules_deb//distroless:defs.bzl", "flatten")

flatten(
    name = "apt_deps",
    tars = [
        "@bookworm//libteam5:data",
        "@bookworm//libteamdctl0:data",
        "@bookworm//python3-dev",
        "@bookworm//python3-protobuf:data",
        "@bookworm//protobuf-compiler:data",
        "@bookworm//python3-protobuf:data",
        # TODO(bazel-ready): Determine if we need a different version of iputils-ping.
        # The Dockerfile runs `apt-get update` before installing this dependency,
        # so the version from the snapshot might be out of date.
        "@bookworm//iputils-ping:data",
    ],
    deduplicate = True,
)

flatten(
  name = "rdeps",
  tars = [
        "@sonic_sairedis//meta:libsaimetadata_dev_pkg",
        "@sonic_sairedis//lib:libsairedis_dev_pkg",
        "@sonic_dash_api//:libdashapi_dev_pkg",
        "@sonic_swss_common//pyext:swsscommon_pkg",
        # TODO(bazel-ready): Port libswsscommon if swsscommon_dist is not enough
        # # $(LIBSWSSCOMMON)
        # "@sonic_swss_common//:libswsscommon",
  ],
  deduplicate = True,
)

oci_image(
    name = "docker-swss-layer-bookworm",
    base = "//dockers/docker-config-engine-bookworm",
    tars = [
        ":apt_deps",
        ":rdeps",
        "@sonic_swss//:debian-data",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive"
    },
    entrypoint = ["/usr/bin/supervisord"],
    visibility = [
      "//dockers/docker-swss-layer-bookworm:__subpackages__",
      "//dockers/docker-orchagent:__subpackages__",
    ],
)

oci_load(
    name = "load",
    image = ":docker-swss-layer-bookworm",
    repo_tags = ["docker-swss-layer-bookworm:latest"]
)

